// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initCreateWhook should fail with access problems 2`] = `
{
  "copyCalls": [
    [
      "/var/lib/node/node_modules/whook-example",
      "/home/whoiam/projects/yolo",
      {
        "filter": [Function],
      },
    ],
  ],
  "execCalls": [
    [
      "git init",
      {
        "cwd": "/home/whoiam/projects/yolo",
      },
      [Function],
    ],
  ],
  "logCalls": [
    [
      "warning",
      "🏁️ - Starting Whook project's creation!",
    ],
  ],
  "oraCalls": [],
  "oraStartCalls": [],
  "oraStopAndPersistCalls": [],
  "readFileCalls": [
    [
      "/var/lib/node/node_modules/whook-example/package.json",
    ],
    [
      "/var/lib/node/node_modules/whook-example/README.md",
    ],
  ],
  "readdirCalls": [
    [
      "/var/lib/node/node_modules/whook-example/src/config",
    ],
  ],
  "writeFileCalls": [
    [
      "/home/whoiam/projects/yolo/README.md",
      "# super-project

YOLO

## Author
Wayne Campbell

",
    ],
    [
      "/home/whoiam/projects/yolo/.env.development",
      "JWT_SECRET=oudelali
",
    ],
    [
      "/home/whoiam/projects/yolo/.env.production",
      "JWT_SECRET=oudelali
",
    ],
    [
      "/home/whoiam/projects/yolo/package.json",
      "{
  "name": "super-project",
  "description": "A new Whook project",
  "version": "0.0.0",
  "license": "SEE LICENSE",
  "engines": {
    "node": ">=16.15.0"
  },
  "main": "dist/index.js",
  "types": "dist/index.d.ts",
  "type": "module",
  "private": true,
  "keywords": [
    "whook"
  ],
  "author": {
    "name": "Wayne Campbell",
    "email": "wayne@warner.com"
  },
  "scripts": {
    "apitypes": "npm run --silent whook -- generateOpenAPISchema --authenticated=true | npm run --silent whook -- generateOpenAPITypes > src/openAPISchema.d.ts",
    "architecture": "jsarch 'src/**/*.ts' > ARCHITECTURE.md && git add ARCHITECTURE.md",
    "build": "rimraf -f 'dist' && tsc --outDir dist",
    "cover": "npm run jest -- --coverage",
    "debug": "NODE_OPTIONS=\${NODE_OPTIONS:-'--inspect'} NODE_ENV=\${NODE_ENV:-development} DEV_MODE=1 DESTROY_SOCKETS=1 DEBUG=\${DEBUG:-whook} ts-node --esm --logError bin/dev",
    "dev": "NODE_ENV=\${NODE_ENV:-development} DEV_MODE=1 DESTROY_SOCKETS=1 ts-node --esm --logError --files bin/dev.js",
    "jest": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest",
    "lint": "eslint 'src/**/*.ts'",
    "postbuild": "PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} ts-node --esm --files -- bin/build.js",
    "prettier": "prettier --write 'src/**/*.ts'",
    "start": "PROJECT_SRC=\\"$PWD/dist\\" NODE_ENV=\${NODE_ENV:-development} node bin/start.js",
    "test": "NODE_ENV=test npm run build && npm run jest",
    "watch": "NODE_ENV=\${NODE_ENV:-development} DEV_MODE=1 DESTROY_SOCKETS=1 ts-node --esm --logError --files bin/watch.js",
    "whook": "NODE_ENV=\${NODE_ENV:-development} whook",
    "whook-dev": "PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} ts-node --esm --logError --files -- bin/whook.js",
    "whook-debug": "NODE_OPTIONS=\${NODE_OPTIONS:-'--inspect'} PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} DEBUG=\${DEBUG:-whook} ts-node --esm --logError --files -- bin/whook.js",
    "whook-repl": "PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} ts-node --esm --logError --files -- bin/repl.js"
  },
  "files": [
    "bin",
    "dist",
    "src",
    "LICENSE",
    "README.md",
    "CHANGELOG.md"
  ],
  "dependencies": {
    "@whook/authorization": "<current_version>",
    "@whook/cors": "<current_version>",
    "@whook/http-router": "<current_version>",
    "@whook/http-server": "<current_version>",
    "@whook/http-transaction": "<current_version>",
    "@whook/swagger-ui": "<current_version>",
    "@whook/whook": "<current_version>",
    "common-services": "^12.0.0",
    "http-auth-utils": "^3.0.4",
    "jwt-service": "^9.0.2",
    "knifecycle": "^14.1.0",
    "openapi-schema-validator": "^12.0.2",
    "openapi-types": "^12.1.0",
    "pkg-dir": "^7.0.0",
    "strict-qs": "^7.0.1",
    "type-fest": "^3.4.0",
    "yerror": "^6.2.1",
    "yhttperror": "^6.1.1"
  },
  "devDependencies": {
    "@typescript-eslint/eslint-plugin": "^5.36.0",
    "@typescript-eslint/parser": "^5.36.0",
    "axios": "^1.2.1",
    "chokidar": "^3.5.1",
    "esbuild": "^0.15.6",
    "esbuild-jest": "^0.5.0",
    "esbuild-node-externals": "^1.5.0",
    "eslint": "^8.23.0",
    "eslint-config-prettier": "^8.5.0",
    "eslint-plugin-prettier": "^4.2.1",
    "jest": "^29.0.1",
    "jsarch": "^6.0.0",
    "parse-gitignore": "^1.0.1",
    "prettier": "^2.7.1",
    "rimraf": "^3.0.2",
    "schema2dts": "^4.1.1",
    "ts-node": "^10.8.1",
    "typescript": "^4.8.2"
  },
  "eslintConfig": {
    "extends": [
      "eslint:recommended",
      "plugin:prettier/recommended",
      "plugin:@typescript-eslint/eslint-recommended",
      "plugin:@typescript-eslint/recommended"
    ],
    "parserOptions": {
      "ecmaVersion": 2018,
      "sourceType": "script",
      "modules": true
    },
    "env": {
      "es6": true,
      "node": true,
      "jest": true,
      "mocha": true
    },
    "plugins": [
      "prettier"
    ],
    "rules": {
      "prettier/prettier": "error"
    },
    "parser": "@typescript-eslint/parser",
    "ignorePatterns": [
      "*.d.ts"
    ]
  },
  "prettier": {
    "semi": true,
    "printWidth": 80,
    "singleQuote": true,
    "trailingComma": "all",
    "proseWrap": "always"
  },
  "jest": {
    "coverageReporters": [
      "lcov",
      "html"
    ],
    "testPathIgnorePatterns": [
      "/node_modules/"
    ],
    "roots": [
      "<rootDir>/src"
    ],
    "testEnvironment": "node",
    "transform": {
      "^.+\\\\.tsx?$": [
        "esbuild-jest",
        {
          "sourcemap": true,
          "format": "esm"
        }
      ]
    },
    "moduleNameMapper": {
      "#(.*)": "<rootDir>/../../node_modules/$1",
      "(.+)\\\\.js": "$1"
    },
    "extensionsToTreatAsEsm": [
      ".ts"
    ]
  }
}",
    ],
    [
      "/home/whoiam/projects/yolo/tsconfig.json",
      "{
  "compilerOptions": {
    "module": "Node16",
    "moduleResolution": "Node16",
    "target": "es2022",
    "noImplicitAny": false,
    "removeComments": false,
    "preserveConstEnums": true,
    "allowSyntheticDefaultImports": true,
    "esModuleInterop": true,
    "strict": true,
    "declaration": true,
    "outDir": "dist",
    "sourceMap": true
  },
  "include": [
    "src/**/*.ts"
  ],
  "exclude": [
    "node_modules"
  ]
}",
    ],
    [
      "/home/whoiam/projects/yolo/LICENSE",
      "Copyright Wayne Campbell, all rights reserved.",
    ],
    [
      "/home/whoiam/projects/yolo/.gitignore",
      "node_modules",
    ],
  ],
}
`;

exports[`initCreateWhook should handle git initialization problems 2`] = `
{
  "copyCalls": [
    [
      "/var/lib/node/node_modules/whook-example",
      "/home/whoiam/projects/yolo",
      {
        "filter": [Function],
      },
    ],
  ],
  "execCalls": [
    [
      "git init",
      {
        "cwd": "/home/whoiam/projects/yolo",
      },
      [Function],
    ],
    [
      "npm i",
      {
        "cwd": "/home/whoiam/projects/yolo",
      },
      [Function],
    ],
  ],
  "logCalls": [
    [
      "warning",
      "🏁️ - Starting Whook project's creation!",
    ],
    [
      "error",
      "⚠️ - Could not initialize the git project!",
    ],
    [
      "warning",
      "✔️ - Project created!",
    ],
    [
      "warning",
      "➕ - Run \`cd yolo\` to enter the project.",
    ],
    [
      "warning",
      "➕ - Then run \`DRY_RUN=1 npm run dev\` to check installation.",
    ],
    [
      "warning",
      "➕ - And finally run \`npm run watch\` to start dev!",
    ],
  ],
  "oraCalls": [
    [
      {
        "text": "Installing dependencies...",
      },
    ],
  ],
  "oraStartCalls": [
    [],
  ],
  "oraStopAndPersistCalls": [
    [
      {
        "symbol": "✔️",
        "text": "Installed dependencies",
      },
    ],
  ],
  "readFileCalls": [
    [
      "/var/lib/node/node_modules/whook-example/package.json",
    ],
    [
      "/var/lib/node/node_modules/whook-example/README.md",
    ],
  ],
  "readdirCalls": [
    [
      "/var/lib/node/node_modules/whook-example/package.json",
    ],
    [
      "/var/lib/node/node_modules/whook-example/README.md",
    ],
  ],
  "writeFileCalls": [
    [
      "/home/whoiam/projects/yolo/README.md",
      "# super-project

YOLO

## Author
Wayne Campbell

",
    ],
    [
      "/home/whoiam/projects/yolo/.env.development",
      "JWT_SECRET=oudelali
",
    ],
    [
      "/home/whoiam/projects/yolo/.env.production",
      "JWT_SECRET=oudelali
",
    ],
    [
      "/home/whoiam/projects/yolo/package.json",
      "{
  "name": "super-project",
  "description": "A new Whook project",
  "version": "0.0.0",
  "license": "SEE LICENSE",
  "engines": {
    "node": ">=16.15.0"
  },
  "main": "dist/index.js",
  "types": "dist/index.d.ts",
  "type": "module",
  "private": true,
  "keywords": [
    "whook"
  ],
  "author": {
    "name": "Wayne Campbell",
    "email": "wayne@warner.com"
  },
  "scripts": {
    "apitypes": "npm run --silent whook -- generateOpenAPISchema --authenticated=true | npm run --silent whook -- generateOpenAPITypes > src/openAPISchema.d.ts",
    "architecture": "jsarch 'src/**/*.ts' > ARCHITECTURE.md && git add ARCHITECTURE.md",
    "build": "rimraf -f 'dist' && tsc --outDir dist",
    "cover": "npm run jest -- --coverage",
    "debug": "NODE_OPTIONS=\${NODE_OPTIONS:-'--inspect'} NODE_ENV=\${NODE_ENV:-development} DEV_MODE=1 DESTROY_SOCKETS=1 DEBUG=\${DEBUG:-whook} ts-node --esm --logError bin/dev",
    "dev": "NODE_ENV=\${NODE_ENV:-development} DEV_MODE=1 DESTROY_SOCKETS=1 ts-node --esm --logError --files bin/dev.js",
    "jest": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest",
    "lint": "eslint 'src/**/*.ts'",
    "postbuild": "PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} ts-node --esm --files -- bin/build.js",
    "prettier": "prettier --write 'src/**/*.ts'",
    "start": "PROJECT_SRC=\\"$PWD/dist\\" NODE_ENV=\${NODE_ENV:-development} node bin/start.js",
    "test": "NODE_ENV=test npm run build && npm run jest",
    "watch": "NODE_ENV=\${NODE_ENV:-development} DEV_MODE=1 DESTROY_SOCKETS=1 ts-node --esm --logError --files bin/watch.js",
    "whook": "NODE_ENV=\${NODE_ENV:-development} whook",
    "whook-dev": "PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} ts-node --esm --logError --files -- bin/whook.js",
    "whook-debug": "NODE_OPTIONS=\${NODE_OPTIONS:-'--inspect'} PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} DEBUG=\${DEBUG:-whook} ts-node --esm --logError --files -- bin/whook.js",
    "whook-repl": "PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} ts-node --esm --logError --files -- bin/repl.js"
  },
  "files": [
    "bin",
    "dist",
    "src",
    "LICENSE",
    "README.md",
    "CHANGELOG.md"
  ],
  "dependencies": {
    "@whook/authorization": "<current_version>",
    "@whook/cors": "<current_version>",
    "@whook/http-router": "<current_version>",
    "@whook/http-server": "<current_version>",
    "@whook/http-transaction": "<current_version>",
    "@whook/swagger-ui": "<current_version>",
    "@whook/whook": "<current_version>",
    "common-services": "^12.0.0",
    "http-auth-utils": "^3.0.4",
    "jwt-service": "^9.0.2",
    "knifecycle": "^14.1.0",
    "openapi-schema-validator": "^12.0.2",
    "openapi-types": "^12.1.0",
    "pkg-dir": "^7.0.0",
    "strict-qs": "^7.0.1",
    "type-fest": "^3.4.0",
    "yerror": "^6.2.1",
    "yhttperror": "^6.1.1"
  },
  "devDependencies": {
    "@typescript-eslint/eslint-plugin": "^5.36.0",
    "@typescript-eslint/parser": "^5.36.0",
    "axios": "^1.2.1",
    "chokidar": "^3.5.1",
    "esbuild": "^0.15.6",
    "esbuild-jest": "^0.5.0",
    "esbuild-node-externals": "^1.5.0",
    "eslint": "^8.23.0",
    "eslint-config-prettier": "^8.5.0",
    "eslint-plugin-prettier": "^4.2.1",
    "jest": "^29.0.1",
    "jsarch": "^6.0.0",
    "parse-gitignore": "^1.0.1",
    "prettier": "^2.7.1",
    "rimraf": "^3.0.2",
    "schema2dts": "^4.1.1",
    "ts-node": "^10.8.1",
    "typescript": "^4.8.2"
  },
  "eslintConfig": {
    "extends": [
      "eslint:recommended",
      "plugin:prettier/recommended",
      "plugin:@typescript-eslint/eslint-recommended",
      "plugin:@typescript-eslint/recommended"
    ],
    "parserOptions": {
      "ecmaVersion": 2018,
      "sourceType": "script",
      "modules": true
    },
    "env": {
      "es6": true,
      "node": true,
      "jest": true,
      "mocha": true
    },
    "plugins": [
      "prettier"
    ],
    "rules": {
      "prettier/prettier": "error"
    },
    "parser": "@typescript-eslint/parser",
    "ignorePatterns": [
      "*.d.ts"
    ]
  },
  "prettier": {
    "semi": true,
    "printWidth": 80,
    "singleQuote": true,
    "trailingComma": "all",
    "proseWrap": "always"
  },
  "jest": {
    "coverageReporters": [
      "lcov",
      "html"
    ],
    "testPathIgnorePatterns": [
      "/node_modules/"
    ],
    "roots": [
      "<rootDir>/src"
    ],
    "testEnvironment": "node",
    "transform": {
      "^.+\\\\.tsx?$": [
        "esbuild-jest",
        {
          "sourcemap": true,
          "format": "esm"
        }
      ]
    },
    "moduleNameMapper": {
      "#(.*)": "<rootDir>/../../node_modules/$1",
      "(.+)\\\\.js": "$1"
    },
    "extensionsToTreatAsEsm": [
      ".ts"
    ]
  }
}",
    ],
    [
      "/home/whoiam/projects/yolo/tsconfig.json",
      "{
  "compilerOptions": {
    "module": "Node16",
    "moduleResolution": "Node16",
    "target": "es2022",
    "noImplicitAny": false,
    "removeComments": false,
    "preserveConstEnums": true,
    "allowSyntheticDefaultImports": true,
    "esModuleInterop": true,
    "strict": true,
    "declaration": true,
    "outDir": "dist",
    "sourceMap": true
  },
  "include": [
    "src/**/*.ts"
  ],
  "exclude": [
    "node_modules"
  ]
}",
    ],
    [
      "/home/whoiam/projects/yolo/LICENSE",
      "Copyright Wayne Campbell, all rights reserved.",
    ],
    [
      "/home/whoiam/projects/yolo/.gitignore",
      "node_modules",
    ],
  ],
}
`;

exports[`initCreateWhook should handle network issues 2`] = `
{
  "copyCalls": [
    [
      "/var/lib/node/node_modules/whook-example",
      "/home/whoiam/projects/yolo",
      {
        "filter": [Function],
      },
    ],
  ],
  "execCalls": [
    [
      "git init",
      {
        "cwd": "/home/whoiam/projects/yolo",
      },
      [Function],
    ],
    [
      "npm i",
      {
        "cwd": "/home/whoiam/projects/yolo",
      },
      [Function],
    ],
  ],
  "logCalls": [
    [
      "warning",
      "🏁️ - Starting Whook project's creation!",
    ],
    [
      "debug",
      "Discarding "/var/lib/node/node_modules/whook-example/package.json" => "/home/whoiam/projects/yolo/package.json ("..").",
    ],
    [
      "debug",
      "Discarding "/var/lib/node/node_modules/whook-example/package-lock.json" => "/home/whoiam/projects/yolo/package-lock.json ("..").",
    ],
    [
      "debug",
      "Discarding "/var/lib/node/node_modules/whook-example/LICENSE" => "/home/whoiam/projects/yolo/LICENSE ("..").",
    ],
    [
      "debug",
      "Discarding "/var/lib/node/node_modules/whook-example/dist/index.js" => "/home/whoiam/projects/yolo/dist/index.js ("../..").",
    ],
    [
      "debug",
      "Moving "/var/lib/node/node_modules/whook-example/src/index.js" => "/home/whoiam/projects/yolo/src/index.js".",
    ],
    [
      "debug",
      "Discarding "/var/lib/node/node_modules/whook-example/coverage/index.html" => "/home/whoiam/projects/yolo/coverage/index.html ("../..").",
    ],
    [
      "debug",
      "Discarding "/var/lib/node/node_modules/whook-example/node_modules/whook/index.js" => "/home/whoiam/projects/yolo/node_modules/whook/index.js ("../../..").",
    ],
    [
      "error",
      "⚠️ - Could not initialize the git project!",
    ],
    [
      "error",
      "⚠️ - Could not retrieve the \`.gitignore\` file contents from: "https://www.gitignore.io/api/osx,node,linux"",
    ],
    [
      "warning",
      "✔️ - Project created!",
    ],
    [
      "warning",
      "➕ - Run \`cd yolo\` to enter the project.",
    ],
    [
      "warning",
      "➕ - Then run \`DRY_RUN=1 npm run dev\` to check installation.",
    ],
    [
      "warning",
      "➕ - And finally run \`npm run watch\` to start dev!",
    ],
  ],
  "oraCalls": [
    [
      {
        "text": "Installing dependencies...",
      },
    ],
  ],
  "oraStartCalls": [
    [],
  ],
  "oraStopAndPersistCalls": [
    [
      {
        "symbol": "✔️",
        "text": "Installed dependencies",
      },
    ],
  ],
  "readFileCalls": [
    [
      "/var/lib/node/node_modules/whook-example/package.json",
    ],
    [
      "/var/lib/node/node_modules/whook-example/README.md",
    ],
  ],
  "readdirCalls": [
    [
      "/var/lib/node/node_modules/whook-example/package.json",
    ],
    [
      "/var/lib/node/node_modules/whook-example/README.md",
    ],
  ],
  "writeFileCalls": [
    [
      "/home/whoiam/projects/yolo/README.md",
      "# super-project

YOLO

## Author
Wayne Campbell

",
    ],
    [
      "/home/whoiam/projects/yolo/.env.development",
      "JWT_SECRET=oudelali
",
    ],
    [
      "/home/whoiam/projects/yolo/.env.production",
      "JWT_SECRET=oudelali
",
    ],
    [
      "/home/whoiam/projects/yolo/package.json",
      "{
  "name": "super-project",
  "description": "A new Whook project",
  "version": "0.0.0",
  "license": "SEE LICENSE",
  "engines": {
    "node": ">=16.15.0"
  },
  "main": "dist/index.js",
  "types": "dist/index.d.ts",
  "type": "module",
  "private": true,
  "keywords": [
    "whook"
  ],
  "author": {
    "name": "Wayne Campbell",
    "email": "wayne@warner.com"
  },
  "scripts": {
    "apitypes": "npm run --silent whook -- generateOpenAPISchema --authenticated=true | npm run --silent whook -- generateOpenAPITypes > src/openAPISchema.d.ts",
    "architecture": "jsarch 'src/**/*.ts' > ARCHITECTURE.md && git add ARCHITECTURE.md",
    "build": "rimraf -f 'dist' && tsc --outDir dist",
    "cover": "npm run jest -- --coverage",
    "debug": "NODE_OPTIONS=\${NODE_OPTIONS:-'--inspect'} NODE_ENV=\${NODE_ENV:-development} DEV_MODE=1 DESTROY_SOCKETS=1 DEBUG=\${DEBUG:-whook} ts-node --esm --logError bin/dev",
    "dev": "NODE_ENV=\${NODE_ENV:-development} DEV_MODE=1 DESTROY_SOCKETS=1 ts-node --esm --logError --files bin/dev.js",
    "jest": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest",
    "lint": "eslint 'src/**/*.ts'",
    "postbuild": "PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} ts-node --esm --files -- bin/build.js",
    "prettier": "prettier --write 'src/**/*.ts'",
    "start": "PROJECT_SRC=\\"$PWD/dist\\" NODE_ENV=\${NODE_ENV:-development} node bin/start.js",
    "test": "NODE_ENV=test npm run build && npm run jest",
    "watch": "NODE_ENV=\${NODE_ENV:-development} DEV_MODE=1 DESTROY_SOCKETS=1 ts-node --esm --logError --files bin/watch.js",
    "whook": "NODE_ENV=\${NODE_ENV:-development} whook",
    "whook-dev": "PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} ts-node --esm --logError --files -- bin/whook.js",
    "whook-debug": "NODE_OPTIONS=\${NODE_OPTIONS:-'--inspect'} PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} DEBUG=\${DEBUG:-whook} ts-node --esm --logError --files -- bin/whook.js",
    "whook-repl": "PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} ts-node --esm --logError --files -- bin/repl.js"
  },
  "files": [
    "bin",
    "dist",
    "src",
    "LICENSE",
    "README.md",
    "CHANGELOG.md"
  ],
  "dependencies": {
    "@whook/authorization": "<current_version>",
    "@whook/cors": "<current_version>",
    "@whook/http-router": "<current_version>",
    "@whook/http-server": "<current_version>",
    "@whook/http-transaction": "<current_version>",
    "@whook/swagger-ui": "<current_version>",
    "@whook/whook": "<current_version>",
    "common-services": "^12.0.0",
    "http-auth-utils": "^3.0.4",
    "jwt-service": "^9.0.2",
    "knifecycle": "^14.1.0",
    "openapi-schema-validator": "^12.0.2",
    "openapi-types": "^12.1.0",
    "pkg-dir": "^7.0.0",
    "strict-qs": "^7.0.1",
    "type-fest": "^3.4.0",
    "yerror": "^6.2.1",
    "yhttperror": "^6.1.1"
  },
  "devDependencies": {
    "@typescript-eslint/eslint-plugin": "^5.36.0",
    "@typescript-eslint/parser": "^5.36.0",
    "axios": "^1.2.1",
    "chokidar": "^3.5.1",
    "esbuild": "^0.15.6",
    "esbuild-jest": "^0.5.0",
    "esbuild-node-externals": "^1.5.0",
    "eslint": "^8.23.0",
    "eslint-config-prettier": "^8.5.0",
    "eslint-plugin-prettier": "^4.2.1",
    "jest": "^29.0.1",
    "jsarch": "^6.0.0",
    "parse-gitignore": "^1.0.1",
    "prettier": "^2.7.1",
    "rimraf": "^3.0.2",
    "schema2dts": "^4.1.1",
    "ts-node": "^10.8.1",
    "typescript": "^4.8.2"
  },
  "eslintConfig": {
    "extends": [
      "eslint:recommended",
      "plugin:prettier/recommended",
      "plugin:@typescript-eslint/eslint-recommended",
      "plugin:@typescript-eslint/recommended"
    ],
    "parserOptions": {
      "ecmaVersion": 2018,
      "sourceType": "script",
      "modules": true
    },
    "env": {
      "es6": true,
      "node": true,
      "jest": true,
      "mocha": true
    },
    "plugins": [
      "prettier"
    ],
    "rules": {
      "prettier/prettier": "error"
    },
    "parser": "@typescript-eslint/parser",
    "ignorePatterns": [
      "*.d.ts"
    ]
  },
  "prettier": {
    "semi": true,
    "printWidth": 80,
    "singleQuote": true,
    "trailingComma": "all",
    "proseWrap": "always"
  },
  "jest": {
    "coverageReporters": [
      "lcov",
      "html"
    ],
    "testPathIgnorePatterns": [
      "/node_modules/"
    ],
    "roots": [
      "<rootDir>/src"
    ],
    "testEnvironment": "node",
    "transform": {
      "^.+\\\\.tsx?$": [
        "esbuild-jest",
        {
          "sourcemap": true,
          "format": "esm"
        }
      ]
    },
    "moduleNameMapper": {
      "#(.*)": "<rootDir>/../../node_modules/$1",
      "(.+)\\\\.js": "$1"
    },
    "extensionsToTreatAsEsm": [
      ".ts"
    ]
  }
}",
    ],
    [
      "/home/whoiam/projects/yolo/tsconfig.json",
      "{
  "compilerOptions": {
    "module": "Node16",
    "moduleResolution": "Node16",
    "target": "es2022",
    "noImplicitAny": false,
    "removeComments": false,
    "preserveConstEnums": true,
    "allowSyntheticDefaultImports": true,
    "esModuleInterop": true,
    "strict": true,
    "declaration": true,
    "outDir": "dist",
    "sourceMap": true
  },
  "include": [
    "src/**/*.ts"
  ],
  "exclude": [
    "node_modules"
  ]
}",
    ],
    [
      "/home/whoiam/projects/yolo/LICENSE",
      "Copyright Wayne Campbell, all rights reserved.",
    ],
  ],
}
`;

exports[`initCreateWhook should work 2`] = `
{
  "copyCalls": [
    [
      "/var/lib/node/node_modules/whook-example",
      "/home/whoiam/projects/yolo",
      {
        "filter": [Function],
      },
    ],
  ],
  "execCalls": [
    [
      "git init",
      {
        "cwd": "/home/whoiam/projects/yolo",
      },
      [Function],
    ],
    [
      "npm i",
      {
        "cwd": "/home/whoiam/projects/yolo",
      },
      [Function],
    ],
  ],
  "logCalls": [
    [
      "warning",
      "🏁️ - Starting Whook project's creation!",
    ],
    [
      "debug",
      "Discarding "/var/lib/node/node_modules/whook-example/package.json" => "/home/whoiam/projects/yolo/package.json ("..").",
    ],
    [
      "debug",
      "Discarding "/var/lib/node/node_modules/whook-example/package-lock.json" => "/home/whoiam/projects/yolo/package-lock.json ("..").",
    ],
    [
      "debug",
      "Discarding "/var/lib/node/node_modules/whook-example/LICENSE" => "/home/whoiam/projects/yolo/LICENSE ("..").",
    ],
    [
      "debug",
      "Discarding "/var/lib/node/node_modules/whook-example/dist/index.js" => "/home/whoiam/projects/yolo/dist/index.js ("../..").",
    ],
    [
      "debug",
      "Moving "/var/lib/node/node_modules/whook-example/src/index.js" => "/home/whoiam/projects/yolo/src/index.js".",
    ],
    [
      "debug",
      "Discarding "/var/lib/node/node_modules/whook-example/coverage/index.html" => "/home/whoiam/projects/yolo/coverage/index.html ("../..").",
    ],
    [
      "debug",
      "Discarding "/var/lib/node/node_modules/whook-example/node_modules/whook/index.js" => "/home/whoiam/projects/yolo/node_modules/whook/index.js ("../../..").",
    ],
    [
      "warning",
      "✔️ - Project created!",
    ],
    [
      "warning",
      "➕ - Run \`cd yolo\` to enter the project.",
    ],
    [
      "warning",
      "➕ - Then run \`DRY_RUN=1 npm run dev\` to check installation.",
    ],
    [
      "warning",
      "➕ - And finally run \`npm run watch\` to start dev!",
    ],
  ],
  "oraCalls": [
    [
      {
        "text": "Installing dependencies...",
      },
    ],
  ],
  "oraStartCalls": [
    [],
  ],
  "oraStopAndPersistCalls": [
    [
      {
        "symbol": "✔️",
        "text": "Installed dependencies",
      },
    ],
  ],
  "readFileCalls": [
    [
      "/var/lib/node/node_modules/whook-example/package.json",
    ],
    [
      "/var/lib/node/node_modules/whook-example/README.md",
    ],
  ],
  "readdirCalls": [
    [
      "/var/lib/node/node_modules/whook-example/package.json",
    ],
    [
      "/var/lib/node/node_modules/whook-example/README.md",
    ],
  ],
  "writeFileCalls": [
    [
      "/home/whoiam/projects/yolo/README.md",
      "# super-project

YOLO

## Author
Wayne Campbell

",
    ],
    [
      "/home/whoiam/projects/yolo/.env.development",
      "JWT_SECRET=oudelali
",
    ],
    [
      "/home/whoiam/projects/yolo/.env.production",
      "JWT_SECRET=oudelali
",
    ],
    [
      "/home/whoiam/projects/yolo/package.json",
      "{
  "name": "super-project",
  "description": "A new Whook project",
  "version": "0.0.0",
  "license": "SEE LICENSE",
  "engines": {
    "node": ">=16.15.0"
  },
  "main": "dist/index.js",
  "types": "dist/index.d.ts",
  "type": "module",
  "private": true,
  "keywords": [
    "whook"
  ],
  "author": {
    "name": "Wayne Campbell",
    "email": "wayne@warner.com"
  },
  "scripts": {
    "apitypes": "npm run --silent whook -- generateOpenAPISchema --authenticated=true | npm run --silent whook -- generateOpenAPITypes > src/openAPISchema.d.ts",
    "architecture": "jsarch 'src/**/*.ts' > ARCHITECTURE.md && git add ARCHITECTURE.md",
    "build": "rimraf -f 'dist' && tsc --outDir dist",
    "cover": "npm run jest -- --coverage",
    "debug": "NODE_OPTIONS=\${NODE_OPTIONS:-'--inspect'} NODE_ENV=\${NODE_ENV:-development} DEV_MODE=1 DESTROY_SOCKETS=1 DEBUG=\${DEBUG:-whook} ts-node --esm --logError bin/dev",
    "dev": "NODE_ENV=\${NODE_ENV:-development} DEV_MODE=1 DESTROY_SOCKETS=1 ts-node --esm --logError --files bin/dev.js",
    "jest": "NODE_OPTIONS=--experimental-vm-modules NODE_ENV=test jest",
    "lint": "eslint 'src/**/*.ts'",
    "postbuild": "PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} ts-node --esm --files -- bin/build.js",
    "prettier": "prettier --write 'src/**/*.ts'",
    "start": "PROJECT_SRC=\\"$PWD/dist\\" NODE_ENV=\${NODE_ENV:-development} node bin/start.js",
    "test": "NODE_ENV=test npm run build && npm run jest",
    "watch": "NODE_ENV=\${NODE_ENV:-development} DEV_MODE=1 DESTROY_SOCKETS=1 ts-node --esm --logError --files bin/watch.js",
    "whook": "NODE_ENV=\${NODE_ENV:-development} whook",
    "whook-dev": "PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} ts-node --esm --logError --files -- bin/whook.js",
    "whook-debug": "NODE_OPTIONS=\${NODE_OPTIONS:-'--inspect'} PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} DEBUG=\${DEBUG:-whook} ts-node --esm --logError --files -- bin/whook.js",
    "whook-repl": "PROJECT_SRC=\\"$PWD/src\\" NODE_ENV=\${NODE_ENV:-development} ts-node --esm --logError --files -- bin/repl.js"
  },
  "files": [
    "bin",
    "dist",
    "src",
    "LICENSE",
    "README.md",
    "CHANGELOG.md"
  ],
  "dependencies": {
    "@whook/authorization": "<current_version>",
    "@whook/cors": "<current_version>",
    "@whook/http-router": "<current_version>",
    "@whook/http-server": "<current_version>",
    "@whook/http-transaction": "<current_version>",
    "@whook/swagger-ui": "<current_version>",
    "@whook/whook": "<current_version>",
    "common-services": "^12.0.0",
    "http-auth-utils": "^3.0.4",
    "jwt-service": "^9.0.2",
    "knifecycle": "^14.1.0",
    "openapi-schema-validator": "^12.0.2",
    "openapi-types": "^12.1.0",
    "pkg-dir": "^7.0.0",
    "strict-qs": "^7.0.1",
    "type-fest": "^3.4.0",
    "yerror": "^6.2.1",
    "yhttperror": "^6.1.1"
  },
  "devDependencies": {
    "@typescript-eslint/eslint-plugin": "^5.36.0",
    "@typescript-eslint/parser": "^5.36.0",
    "axios": "^1.2.1",
    "chokidar": "^3.5.1",
    "esbuild": "^0.15.6",
    "esbuild-jest": "^0.5.0",
    "esbuild-node-externals": "^1.5.0",
    "eslint": "^8.23.0",
    "eslint-config-prettier": "^8.5.0",
    "eslint-plugin-prettier": "^4.2.1",
    "jest": "^29.0.1",
    "jsarch": "^6.0.0",
    "parse-gitignore": "^1.0.1",
    "prettier": "^2.7.1",
    "rimraf": "^3.0.2",
    "schema2dts": "^4.1.1",
    "ts-node": "^10.8.1",
    "typescript": "^4.8.2"
  },
  "eslintConfig": {
    "extends": [
      "eslint:recommended",
      "plugin:prettier/recommended",
      "plugin:@typescript-eslint/eslint-recommended",
      "plugin:@typescript-eslint/recommended"
    ],
    "parserOptions": {
      "ecmaVersion": 2018,
      "sourceType": "script",
      "modules": true
    },
    "env": {
      "es6": true,
      "node": true,
      "jest": true,
      "mocha": true
    },
    "plugins": [
      "prettier"
    ],
    "rules": {
      "prettier/prettier": "error"
    },
    "parser": "@typescript-eslint/parser",
    "ignorePatterns": [
      "*.d.ts"
    ]
  },
  "prettier": {
    "semi": true,
    "printWidth": 80,
    "singleQuote": true,
    "trailingComma": "all",
    "proseWrap": "always"
  },
  "jest": {
    "coverageReporters": [
      "lcov",
      "html"
    ],
    "testPathIgnorePatterns": [
      "/node_modules/"
    ],
    "roots": [
      "<rootDir>/src"
    ],
    "testEnvironment": "node",
    "transform": {
      "^.+\\\\.tsx?$": [
        "esbuild-jest",
        {
          "sourcemap": true,
          "format": "esm"
        }
      ]
    },
    "moduleNameMapper": {
      "#(.*)": "<rootDir>/../../node_modules/$1",
      "(.+)\\\\.js": "$1"
    },
    "extensionsToTreatAsEsm": [
      ".ts"
    ]
  }
}",
    ],
    [
      "/home/whoiam/projects/yolo/tsconfig.json",
      "{
  "compilerOptions": {
    "module": "Node16",
    "moduleResolution": "Node16",
    "target": "es2022",
    "noImplicitAny": false,
    "removeComments": false,
    "preserveConstEnums": true,
    "allowSyntheticDefaultImports": true,
    "esModuleInterop": true,
    "strict": true,
    "declaration": true,
    "outDir": "dist",
    "sourceMap": true
  },
  "include": [
    "src/**/*.ts"
  ],
  "exclude": [
    "node_modules"
  ]
}",
    ],
    [
      "/home/whoiam/projects/yolo/LICENSE",
      "Copyright Wayne Campbell, all rights reserved.",
    ],
    [
      "/home/whoiam/projects/yolo/.gitignore",
      "node_modules",
    ],
  ],
}
`;
